src/style.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color: #0f0f0f;
  background-color: #f6f6f6;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #ffffff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

nav {
  font-size: 2em;
  text-align: center;
  margin-top: 15px;
}

nav a {
  padding: 10px 10px 10px 10px;
}

nav #selected {
  font-weight: bold;
}

.centered {
  /*display: flex;*/
  justify-content: center;
  margin: auto;
  width: 75%;
}

.actually_centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

#Client, #Server{
  margin: 15px;
  padding: 10px;
  border-radius: 25px;
  background-color:#3f3f3f;
}

#project-directory
{
  padding-top: 1em;
}

h1 {
  text-align: center;
}

#project_directory_input {
  margin-right: 14px;
  margin-left: 14px;
  display: inline-block;
}

input,
button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  color: #0f0f0f;
  background-color: #ffffff;
  transition: border-color 0.25s;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
  display: inline-block;
}

button {
  cursor: pointer;
}

button:hover {
  border-color: #396cd8;
}

input,
button {
  outline: none;
}

@media (prefers-color-scheme: dark) {
  :root {
    color: #f6f6f6;
    background-color: #2f2f2f;
  }

  a:hover {
    color: #24c8db;
  }

  input,
  button {
    color: #ffffff;
    background-color: #0f0f0f98;
  }
}

